syntax = "proto3";
 //定义protobuf的包名称空间
package toycache;

option java_package = "com.t0ugh.sdk.proto";
option java_outer_classname = "Proto";

import "Database.proto";

enum MessageType {
  Invalid = 0;

  // 对KEY操作的命令
  Exists = 1;
  Del = 2;
//  Type = 3;

  // 对String操作的命令
  Get = 4;
  Set = 5;
//  GetSet = 6; //设置指定 key 的值，并返回 key 的旧值。
  Expire = 7;
  Save = 8; //后台开个线程存, 约等于Redis的SAVE
  RewriteLog = 9; //重写日志(压缩日志)

  SAdd = 10; //向集合中添加
  SCard = 11; //查询集合中元素个数
  SIsMember = 12; //查询元素是否在集合中
  SMembers = 13; //返回集合中所有的元素
  SPop = 14; //随机删除并返回N个元素
  SRem = 15; // 删除
  SRandMember = 16; //随机返回N个元素

  InnerClearExpire = 101;
  InnerSave = 102;
  InnerSaveFinish = 103;
  InnerRewriteLog = 104;
  InnerRewriteLogFinish = 105;

}

enum ResponseCode {
  // 未知错误
  Unknown = 0;
  // 成功
  OK = 1;
  // 非法的参数
  InvalidParam = 2;
  // 操作对应的key与storage中的ValueObject对应不上 todo 这句话说的也太不清不楚了, 重新组织一下
  ValueTypeNotMatch = 3;
  // 指定的Key已经过期了
  KeyExpired = 4;
}

message Request {
  MessageType messageType = 1;
  ExistsRequest existsRequest = 2;
  DelRequest delRequest = 3;
  GetRequest getRequest = 4;
  SetRequest setRequest = 5;
  ExpireRequest expireRequest = 6;
  InnerClearExpireRequest innerClearExpireRequest = 7;
  InnerSaveRequest innerSaveRequest = 8;
  SaveRequest saveRequest = 9;
  InnerRewriteLogRequest innerRewriteLogRequest = 10;
  InnerRewriteLogFinishRequest innerRewriteLogFinishRequest = 11;
  RewriteLogRequest rewriteLogRequest = 12;
  InnerSaveFinishRequest innerSaveFinishRequest = 13;
  SAddRequest sAddRequest = 14;
  SCardRequest sCardRequest = 15;
  SIsMemberRequest sIsMemberRequest = 16;
  SMembersRequest sMembersRequest = 17;
  SPopRequest sPopRequest = 18;
  SRemRequest sRemRequest = 19;
  SRandMemberRequest sRandMemberRequest = 20;
}

message Response {
  MessageType messageType = 1;
  ResponseCode responseCode = 2;
  ExistsResponse existsResponse = 3;
  DelResponse delResponse = 4;
  GetResponse getResponse = 5;
  SetResponse setResponse = 6;
  ExpireResponse expireResponse = 7;
  InnerClearExpireResponse innerClearExpireResponse = 8;
  InnerSaveResponse innerSaveResponse = 9;
  SaveResponse saveResponse = 10;
  InnerRewriteLogResponse innerRewriteLogResponse = 11;
  InnerRewriteLogFinishResponse innerRewriteLogFinishResponse = 12;
  RewriteLogResponse rewriteLogResponse = 13;
  InnerSaveFinishResponse innerSaveFinishResponse = 14;
  SAddResponse sAddResponse = 15;
  SCardResponse sCardResponse = 16;
  SIsMemberResponse sIsMemberResponse = 17;
  SMembersResponse sMembersResponse = 18;
  SPopResponse sPopResponse = 19;
  SRemResponse sRemResponse = 20;
  SRandMemberResponse sRandMemberResponse = 21;
}

message SRandMemberRequest {
  string key = 1;
  uint32 count = 2;
}

message SRandMemberResponse {
  repeated string setValue = 1;
}

message SRemRequest {
  string key = 1;
  repeated string members = 2;
}

message SRemResponse {
  uint32 deleted = 1;
}

message SPopRequest {
  string key = 1;
  uint32 count = 2;
}


message SPopResponse {
  repeated string setValue = 1;
}

message SMembersRequest {
  string key = 1;
}

message SMembersResponse {
  repeated string setValue = 1;
}

message SIsMemberRequest {
  string key = 1;
  string member = 2;
}

message SIsMemberResponse {
  bool isMember = 1;
}

message SCardRequest {
  string key = 1;
}

message SCardResponse {
  int32 size = 1;
}

message SAddRequest {
  string key = 1;
  repeated string setValue = 3;
}


message SAddResponse {
  int32 added = 1;
}

message SaveRequest {
}

message InnerSaveFinishRequest {
  bool ok = 1;
}

message InnerSaveFinishResponse {
  bool ok = 1;
}

message RewriteLogRequest {
}

message RewriteLogResponse {
  bool ok = 1;
}

message SaveResponse {
  bool ok = 1;
}

message InnerSaveRequest {
  Database db = 1;
  string filePath = 2;
}

message InnerRewriteLogRequest {
  Database db = 1;
}

message InnerRewriteLogFinishRequest {
  bool ok = 1;
}

message InnerRewriteLogFinishResponse {
  bool ok = 1;
}

message InnerRewriteLogResponse {
  bool ok = 1;
}

message InnerSaveResponse {
  bool ok = 1;
}

message InnerClearExpireRequest {
}

message InnerClearExpireResponse {
  uint32 cleared = 1;
}

message ExpireRequest {
  string key = 1;
  uint64 expireTime = 2;
}

message ExpireResponse {
  bool ok = 1;
}

message ExistsRequest {
  string key = 1;
}

message ExistsResponse {
  bool exists = 1;
}

message DelRequest {
  string key = 1;
}

message DelResponse {
  bool ok = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool ok = 1;
}